# Sem_2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
contest_0/gcd/: gcd.h
contest_0/sum/: sum.h
contest_1/array/: array.h
contest_1/big_int/: big_int.cpp  big_int.h  big_integer.cpp  big_integer.h
contest_1/bin_search/: bin_search.h
contest_1/cpp_string/: cppstring.cpp  cppstring.h
contest_1/heap/: heap.h
contest_1/kth_element/: kth_element.h
contest_1/matrix/: matrix.cpp  matrix.h
contest_1/merge/: merge.h
contest_1/multiply/: multiply.h
contest_1/rational/: rational.cpp  rational.h
contest_1/sort/: sort.h
contest_1/string_view/: string_view.h
contest_1/subtract/: subtract.h
contest_1/sum/: sum.h
contest_2/figures/: dots.h
contest_2/part_1/: convex_polygon.cpp  distance.cpp  distance_sections.cpp  graham.cpp  jarvis.cpp  lines.h  point_in_polygon.cpp  surface.cpp  vector.cpp
contest_2/part_2/any/: any.h
contest_2/part_2/geometry/: circle.h  line.h  point.h  polygon.h  ray.h  segment.h  shape.h  vector.h
contest_2/part_2/geometry/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
contest_2/part_2/shared_ptr/: shared_ptr.h
contest_2/part_2/tokenize/: tokenize.cpp  tokenize.h
contest_2/part_2/unique_ptr/: unique_ptr.h
contest_3/part_1/: animals.cpp  bank.cpp  calc.cpp  count.cpp  dictionary.cpp  frequency.cpp  graph.cpp  idiot.cpp  radio.cpp
contest_3/part_2/iter/: enumerate.h  range.h  reversed.h
contest_3/part_2/unordered_set/: unordered_set.h
contest_3/part_2/vector/: vector.cpp  vector.h
contest_4/: A_prefix_sums.cpp  B_max_sum.cpp  D_sparse_table.cpp  E_fenwick.cpp  F_fenwick_3d.cpp  G_segment_tree.cpp  H_segment_tree_update.cpp  I_build_treap.cpp  J_BST.cpp  K_sum.cpp  pin.cpp  segment_from_bottom.cpp  segment_from_top_unfinished.cpp
test/: catch.hpp  doctest.h  test_big_int.cpp  test_matrix.cpp  test_rational.cpp  test_string.cpp  test_string_view.cpp
test/contest_1/: test_big_int.cpp  test_matrix.cpp  test_rational.cpp  test_string.cpp  test_string_view.cpp
test/contest_2/: test_any.cpp  test_shared_ptr.cpp  test_tokenize.cpp  test_unique_ptr.cpp
test/contest_3/: test_enumerate.cpp  test_range.cpp  test_reversed.cpp  test_unordered_set.cpp  test_vector.cpp
